--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
       </ul>
 
       <ul class="right hide-on-med-and-down">
+        <li><a href="development.html">Development</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="development.html">Development</a></li>
+      </ul>
+
+      <ul class="right hide-on-med-and-down">
         <li><a href="research.html">Research</a></li>
       </ul>
 
@@ -70,7 +78,7 @@
       <br><br>
       <h1 class="header center orange-text">ExoGame</h1>
       <div class="row center">
-        <h5 class="header col s12 light">This is the project for our COMP204P module, working with ATOS.</h5>
+        <h5 class="header col s12 light">This is the project for our COMP205P module, working with ATOS.</h5>
       </div>
       <div class="row">
         <p>The objective of this project is to produce an <b>open Urban gaming platform called ExoGame</b>, in this case specifically targeting advertisement panels. The idea is to identify urban resources, geo-reference the resource, define interaction rules and integrate (when relevant). This allows the build of a resource active mapping of the various urban gaming points. These mapping points are then exposed via an open API, which would allow the building of games on top of it.
