--- a/reports.html
+++ b/reports.html
@@ -31,6 +31,14 @@
       </ul>
 
       <ul class="right hide-on-med-and-down">
+        <li><a href="development.html">Development</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="development.html">Development</a></li>
+      </ul>
+
+      <ul class="right hide-on-med-and-down">
         <li><a href="research.html">Research</a></li>
       </ul>
 
@@ -72,6 +80,7 @@
       <br><br>
       <h1 class="header center orange-text">Reports</h1>
       <div class="row center">
+        <h4 class="header center orange-text">Bi-Weekly Reports</h4>
         <h5 class="header col s12 light">Below is a list of all our bi-weekly reports of the project so far. The reports are used to track our progress with the project as well as the minutes of our meetings.</h5>
       </div>
       <br><br>
@@ -87,10 +96,23 @@
       <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Bi-Weekly Report 4.pdf">4. Bi-Weekly Report 3rd December 2016</a></b></h4></span>
       </div> 
       <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Bi-Weekly Report 5.pdf">5. Bi-Weekly Report 27th January 2017</a></b></h4></span>
+      </div>
+      <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Bi-Weekly Report 6.pdf">6. Bi-Weekly Report 8th February 2017</a></b></h4></span>
+      </div> 
+      <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Bi-Weekly Report 7.pdf">7. Bi-Weekly Report 27th February 2017</a></b></h4></span>
+      </div>
+      <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Bi-Weekly Report 8.pdf">8. Bi-Weekly Report 10th March 2017</a></b></h4></span>
+      </div>
+      <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Bi-Weekly Report 9.pdf">9. Bi-Weekly Report 24th March 2017</a></b></h4></span>
       </div> 
     </div>
 
     </div>
+    
+    <h4 class="header center orange-text">Documentation</h4>
+    <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Doumentation.pdf">User documentation for installation and usage</a></b></h4></span>
+      </div> 
+  
   </div>
 
  <br><br>
