--- a/requirements.html
+++ b/requirements.html
@@ -31,6 +31,14 @@
       </ul>
 
       <ul class="right hide-on-med-and-down">
+        <li><a href="development.html">Development</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="development.html">Development</a></li>
+      </ul>
+
+      <ul class="right hide-on-med-and-down">
         <li><a href="research.html">Research</a></li>
       </ul>
 
