--- a/reports.html
+++ b/reports.html
@@ -110,7 +110,7 @@
     </div>
     
     <h4 class="header center orange-text">Documentation</h4>
-    <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Doumentation.pdf">User documentation for installation and usage</a></b></h4></span>
+    <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Documentation.pdf">User documentation for installation and usage</a></b></h4></span>
       </div> 
   
   </div>
