Added development plan

--- a/testing.html
+++ b/testing.html
@@ -104,8 +104,8 @@
           <p>Vuforia has got many sample applications demonstrating its capability. From reading the sample apps and Unity tutorials, we’ve made a few simple interactions such as image recognition, user defined targets recognition, markerless augmented reality and text recognition.</p>
           <p><b> Below is a document containing the test cases we carried out on our final system along with their respective results:</b></p>
           <div class="row">
-            <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Testing.pdf">Test cases and results</a></b></h4></span>
-             </div> 
+            <div class="col s12 header center orange-text"><span class="flow-text"><h4><a href="assets/Testing.pdf"><u>Test cases and results</u></a></b></h4></span>
+            </div> 
           
           <p><b>Below are screenshots of the HCI of the PoC. <i>(From left to right: Login page, facing camera to advertisement, clicking on the AR object, rewards page)</i></b></p>
 
